update sumBug and send Email

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -66,8 +66,12 @@
         display: block;    
     }
    
-
+    
+   
+  
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100&display=swap');
     
 
 
