--- a/frontend/styles/Preview.css
+++ b/frontend/styles/Preview.css
@@ -33,6 +33,7 @@
 
 .input-icons i {
     position: absolute;
+    align-items: center;
 }
  
 .input-icons {
@@ -45,6 +46,8 @@
     color: #897BF1;
     min-width: 50px;
     text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
 }
  
 /* .in {
@@ -109,6 +112,44 @@ table {
     width: 100%;
     height: 300px;
     background-color: aliceblue;
+}
+
+.info_homeAdd{
+    margin-top: 30px ;
+    margin-left: 30px;
+    width: 25%;
+    height: 85%;
+    background-color: white;
+    float: left;
+    border-radius: 16.893px;
+
+}
+
+.h1Ininfo_homeAdd{
+    /* //font-size: small; */
+    color: #15192C;
+    font-family: Abhaya Libre SemiBold;
+    font-size: 16.893px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.338px;
+}
+.btn_showAdd{
+    width: 100%;
+}
+.showBtn_add{
+    border-radius: 20px;
+    width: 20%;
+    height: 89px;
+    flex-shrink: 0;
+    background: #F3D380;
+    margin-top: 30px ;
+    margin-left: 3%;
+    color: #000;
+    border-color: #F3D380 ;
+    float: left;
+    
 }
 
 .Menu{
@@ -326,20 +367,22 @@ table {
     font-family: Inter;
     font-size: 20px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 800;
     line-height: normal;
 }
-
+ 
 .radioSelect {
     margin-top: 15px;
-    margin-left: 10px ;
+    margin-left: 20px ;
+    margin-right: 20px;
+    
 }
 .radioSelect label{
     margin-left: 10px ;
-    margin-right: 20px;
+    margin-right: 30px;
     width: 100%;
 
-}
+} 
 
 .C1_styled-table {
     border-collapse: collapse;
@@ -609,11 +652,11 @@ table {
 
 .showch_th1{
     text-align: center;
-    width: 4%;
+    width: 3%;
 }
 .showch_th2{
     text-align: center;
-    width: 9%;
+    width: 10%;
 }
 .showch_th3{
     text-align: center;
@@ -627,10 +670,388 @@ table {
 
 .showch_th5{
     text-align: center;
-    width: 10%;
+    width: 20%;
 }
 
 .showch_th6{
     text-align: center;
+    width: 3%;
+}
+
+.icon_showch{
+    cursor: pointer;
+}
+
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    width: 100%;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
+
+
+
+  div.panel{
+    max-width: 85%;
+    margin: auto;
+    margin-top: calc(5% - 0px);
+}
+details{
+    background:#fff;
+    font-size:16px;
+    border-bottom:1px solid #e0e0e0;
+      box-shadow:0 0 2px rgba(0,0,0,0.12),0 2px 4px rgba(0,0,0,0.24);
+    display:flex; }
+
+details div.content{
+    padding:0px 24px 24px 24px;
+}
+
+details[open] summary:after {
+    color:#9e9e9e;
+    content: "expand_less";
+    font-family: 'Material Icons';
+}
+details[open]{
+    margin-top:16px;
+    margin-bottom:16px;
+    border:none;
+    border-radius: 2px;
+
+
+}
+details[open]:first-child{
+    margin-top:0;
+    margin-bottom:16px;
+    border:none;
+}
+details[open]:last-child{
+    margin-top:16px;
+    margin-bottom:0px;
+    border:none;
+}
+
+summary{
+    outline:none;
+    cursor: pointer;
+    padding: 16px 24px;
+    color:#212121;
+    position: relative;
+    font-size: 15px;
+}
+summary:hover{
+    background:#eeeeee;
+}
+
+details[open] summary:hover{
+    background:none;
+}
+summary ul {
+    padding-left: 0;
+    list-style: none;
+    display: -webkit-flex;
+    display: flex;
+    align-items: center;
+}
+summary ul li{
+     flex: 1 100%;
+     flex-flow: row wrap;
+}
+summary ul li span{
+      display: block;
+      font-size: 12px;
+      margin-top: 6px;
+      opacity: .75;
+}
+summary::-webkit-details-marker {
+    display: none;
+}
+summary::after {
+    content: "expand_more";
+    font-family: 'Material Icons';
+    color: #9e9e9e;
+    font-size: 1.5em;
+    padding: 0;
+    text-align: center;
+    margin-top: 0;
+    position: absolute;
+    top: calc(50% - 12px);
+    bottom: 0;
+    right: 0;
+    width: 6%;
+}  
+
+*, ::after, ::before {
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
+}
+
+html, body, ul, ol {
+    margin: 0;
+    padding: 0;
+}
+
+
+.C1A_styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    text-align: center;
+}
+
+.C1A_styled-table thead tr {
+    background-color: #897BF1;
+    color: #ffffff;
+    text-align: left;
+}
+
+.C1A_styled-table th,
+.C1A_styled-table td {
+    padding: 12px 15px;
+}
+
+.C1A_styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.C1A_styled-table tbody tr:nth-of-type(even) {
+    background-color: #F7F6FE;;
+}
+
+.C1A_styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #897BF1;
+}
+.C1A_styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+}
+
+.C1A_th1{
+    text-align: center;
+    width: 5%;
+}
+.C1A_th2{
+    text-align: center;
+    width: 15%;
+}
+.C1A_th3{
+    text-align: center;
+    width:40% ;
+}
+
+.C1A_th4{
+    text-align: center;
     width: 10%;
 }
+
+.C1A_th5{
+    text-align: center;
+    width: 10%;
+}
+
+.C1A_th6{
+    text-align: center;
+    width: 2%;
+}
+
+.C1AnameC{
+    /* width: 75%;
+    border-radius: 10px;
+    padding: 10px;
+    border-color: #897BF1;
+    min-width: 50px;
+     */
+     width: 65%;
+     padding: 10px 10px 10px 50px;
+     text-align: left;
+     border-radius: 16px;
+     border: 1px solid #1a1a1b;
+     background: #FFF;
+     box-shadow: 0px 14px 14px 0px rgba(191, 197, 224, 0.25);
+     margin-left: auto;
+     margin-right: auto;
+     display: block;
+   
+}
+.C1AnameC:hover{
+    color: #00B4CC;
+  }
+.wrap{
+    width: 30%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .btnC1ACheck{
+    color: #fdfdfd; /* Replace with your desired color code */
+    background-color: #15BD58;
+    border-color: #15BD58;
+    border-radius: 10px;
+    height: 10%;
+    font-size: 24px; /* Replace with your desired font size */
+  }
+
+
+  .c2Aname{
+    font-size: x-large;
+  }
+
+  .C2_sava1{
+    color: white;
+    background-color: #05CF4A;
+    width: 5%;
+    height: 30px;
+    border-color: #05CF4A;
+    border-radius: 10px;
+  }
+
+
+
+
+ 
+
+
+  /* USER LIST TABLE */
+  .user-list tbody td > img {
+      position: relative;
+      max-width: 50px;
+      float: left;
+      margin-right: 15px;
+  }
+  .user-list tbody td .user-link {
+      display: block;
+      font-size: 1.25em;
+      padding-top: 3px;
+      margin-left: 60px;
+  }
+  .user-list tbody td .user-subhead {
+      font-size: 0.875em;
+      font-style: italic;
+  }
+  
+  
+
+  .C2E_styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    text-align: center;
+}
+
+.C2E_styled-table thead tr {
+    background-color: #047ce6;
+    color: #ffffff;
+    text-align: left;
+}
+
+.C2E_styled-table th,
+.C2E_styled-table td {
+    padding: 12px 15px;
+}
+
+.C2E_styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.C2E_styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.C2E_styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid#047ce6;
+}
+.C2E_styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #047ce6;
+}
+
+.C2E_th1{
+    text-align: center;
+    width: 5%;
+}
+.C2E_th2{
+    text-align: center;
+    width: 15%;
+}
+.C2E_th3{
+    text-align: center;
+    width:40% ;
+}
+
+.C2E_th4{
+    text-align: center;
+    width: 10%;
+}
+
+.C2E_th5{
+    text-align: center;
+    width: 10%;
+}
+
+.C2E_th6{
+    text-align: center;
+    width: 2%;
+}
+
+@media print {
+   #printbtn {
+    display: none;
+   } 
+   @page {
+    margin: 0;
+   }
+   body{
+    margin: 1.6cm;
+   }
+}
+
+
