--- a/frontend/styles/Preview.css
+++ b/frontend/styles/Preview.css
@@ -1055,3 +1055,406 @@ html, body, ul, ol {
 }
 
 
+
+
+.table-wrapper {
+    min-width: 1000px;
+    background: #fff;
+    padding: 20px 25px;
+    border-radius: 3px;
+    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+}
+.table-title {
+    padding-bottom: 15px;
+    background: #299be4;
+    color: #fff;
+    padding: 16px 30px;
+    margin: -20px -25px 10px;
+    border-radius: 3px 3px 0 0;
+}
+.table-title h2 {
+    margin: 5px 0 0;
+    font-size: 24px;
+}
+.table-title .btn {
+    color: #ebedf1;
+    float: right;
+    font-size: 13px;
+    background: #299be4;
+    border: none;
+    min-width: 50px;
+    border-radius: 2px;
+    border: none;
+    outline: none !important;
+    margin-left: 10px;
+    cursor: pointer; 
+}
+
+.table-title .btn i {
+    float: left;
+    font-size: 21px;
+    margin-right: 5px;
+}
+.table-title .btn span {
+    float: left;
+    margin-top: 2px;
+}
+table.table tr th, table.table tr td {
+    border-color: #e9e9e9;
+    padding: 12px 15px;
+    vertical-align: middle;
+}
+table.table tr th:first-child {
+    width: 60px;
+}
+table.table tr th:last-child {
+    width: 100px;
+}
+table.table-striped tbody tr:nth-of-type(odd) {
+    background-color: #fcfcfc;
+}
+table.table-striped.table-hover tbody tr:hover {
+    background: #f5f5f5;
+}
+table.table th i {
+    font-size: 13px;
+    margin: 0 5px;
+    cursor: pointer;
+}	
+table.table td:last-child i {
+    opacity: 0.9;
+    font-size: 22px;
+    margin: 0 5px;
+}
+table.table td a {
+    font-weight: bold;
+    color: #566787;
+    display: inline-block;
+    text-decoration: none;
+}
+table.table td a:hover {
+    color: #2196F3;
+}
+table.table td a.settings {
+    color: #2196F3;
+}
+table.table td a.delete {
+    color: #F44336;
+    cursor: pointer;
+}
+table.table td i {
+    font-size: 19px;
+}
+table.table .avatar {
+    border-radius: 50%;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+.status {
+    font-size: 30px;
+    margin: 2px 2px 0 0;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 10px;
+}
+.text-success {
+    color: #10c469;
+}
+.text-info {
+    color: #62c9e8;
+}
+.text-warning {
+    color: #FFC107;
+}
+.text-danger {
+    color: #ff5b5b;
+}
+.pagination {
+    float: right;
+    margin: 0 0 5px;
+}
+.pagination li a {
+    border: none;
+    font-size: 13px;
+    min-width: 30px;
+    min-height: 30px;
+    color: #999;
+    margin: 0 2px;
+    line-height: 30px;
+    border-radius: 2px !important;
+    text-align: center;
+    padding: 0 6px;
+}
+.pagination li a:hover {
+    color: #666;
+}	
+.pagination li.active a, .pagination li.active a.page-link {
+    background: #03A9F4;
+}
+.pagination li.active a:hover {        
+    background: #0397d6;
+}
+.pagination li.disabled i {
+    color: #ccc;
+}
+.pagination li i {
+    font-size: 16px;
+    padding-top: 6px
+}
+.hint-text {
+    float: left;
+    margin-top: 10px;
+    font-size: 13px;
+}
+
+
+
+
+.C2EM_th1{
+    text-align: center;
+    width: 5%;
+}
+.C2EM_th2{
+    text-align: center;
+    width: 40%;
+}
+.C2EM_th3{
+    text-align: center;
+    width:15% ;
+}
+
+.C2EM_th4{
+    text-align: center;
+    width: 15%;
+}
+
+.C2EM_th5{
+    text-align: center;
+    width: 10%;
+}
+
+.C2EM_th6{
+    text-align: center;
+    width: 10%;
+}
+
+.deleteM{
+    text-align: center;
+   
+}
+.deleteM i {
+    color: red;
+  
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+
+
+
+.card {
+    
+    
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: white;
+    margin: 0 auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); */
+    transition: all 0.3s;
+    
+    /* &:hover {
+      
+      box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    
+    } */
+    
+  
+    
+    .photo {
+      margin-top: 50px;
+      padding: 30px;
+      width: 45%;
+      text-align: center;
+      float: left;
+      
+      img { 
+        max-height: 240px; 
+      }
+      
+    }
+    
+    .description {
+        margin-top: 50px;
+       padding: 30px;
+       float: left;
+       width: 55%;
+       border-left: 2px solid #efefef;
+       
+       h1 {
+         color: #515151;
+         font-weight: 300;
+         padding-top: 0px;
+         margin: 0px;
+         font-size: 30px;
+         font-weight: 300;
+       }
+     
+       h2 {
+        margin: 0px;
+        color: #515151;
+        
+        text-transform: uppercase;
+        font-weight: 500;
+       }
+      
+       h4 { 
+         margin: 0;
+         color: #727272;
+         text-transform: uppercase;
+         font-weight: 500;
+         font-size: 12px
+       }
+      
+       p { 
+         font-size: 12px; 
+         line-height: 20px;
+         color: #727272;
+         padding: 20px 0;
+         margin: 0;
+      }
+      
+       button {
+
+         outline: 0;
+         border: 0;
+         background: none;
+         border: 1px solid #d9d9d9;
+         padding: 8px 0px;
+         margin-bottom: 30px;
+         color: #515151;
+         text-transform: uppercase;
+         width: 125px;
+         font-family: inherit;
+         margin-right: 5px;
+         transition: all 0.3s ease;
+         font-weight: 500;
+         
+         &:hover {
+           
+          
+           border: 1px solid #aedaa6;
+           color: #aedaa6;
+           cursor: pointer;
+           
+         }
+
+       }
+      
+    }
+    
+  }
+
+  @media screen and (max-width: 600px) {
+    /* Add your responsive styles for smaller screens here */
+    .card {
+      /* Example: Adjust card styling for smaller screens */
+      width: 90%;
+      margin: 0 auto;
+    }
+  
+    /* Add more responsive styles as needed */
+  }
+
+  
+  .btnCfda{
+    height: 10vh;
+    width: 100vw;
+    text-align: center;
+    
+}
+
+
+
+
+.bodyTproductlist{
+   height: 650px;
+   overflow: auto;
+   text-align: center;
+   border-collapse: collapse;
+}
+    
+
+.table_section{
+    height: 300x;
+    overflow: auto;
+}
+    /* body{
+        overflow: hidden;
+    } */
+   
+
+  
+
+    .tpl th{
+        position: sticky;
+        top: 0;
+        background-color: #f6f9fc;
+        color: #8493a5;
+        font-size: 15px;
+    } 
+        
+
+   
+    
+    .plac  {
+        border-bottom: 1px solid #dddddd;
+        padding: 10px 20px;
+       word-break: break-all;
+       text-align: center;
+    }
+
+    /* td img{
+        height: 60px;
+        width: 60px;
+        object-fit: cover;
+        border-radius: 15px;
+        border: 5px solid #ced0d2;
+    } */
+
+   .trplc tr:hover {
+        color: #0eacd8;
+        cursor: pointer;
+        background-color: #f6f9fc;
+
+    }
+
+
+.table_tp{
+    width: 100%;
+    table-layout: fixed;
+    min-width: 1000px;
+}
+
+.pl{
+    outline: none;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    padding: 10px;
+    
+}
+
+.plTD :nth-child(1){
+   
+}
+
+.plTD :nth-child(2){
+    
+}
+
