--- a/frontend/styles/Preview.css
+++ b/frontend/styles/Preview.css
@@ -2,7 +2,7 @@
     height: 60vh;
     width: 100vw;
     text-align: center;
-    
+
 }
 
 .logo1{
@@ -35,12 +35,12 @@
     position: absolute;
     align-items: center;
 }
- 
+
 .input-icons {
     margin: 30px auto 10px auto;
     width: 500px;
 }
- 
+
 .icon {
     padding: 10px;
     color: #897BF1;
@@ -49,7 +49,7 @@
     margin-top: auto;
     margin-bottom: auto;
 }
- 
+
 /* .in {
     width: 100%;
     padding: 10px 10px 10px 50px;
@@ -68,7 +68,7 @@
 }
 
 .in :focus{
-    border-color:  #897BF1; 
+    border-color:  #897BF1;
     box-shadow: 0px 14px 14px 0px rgba(191, 197, 224, 0.25);
 }
 
@@ -80,7 +80,7 @@
     max-height: 300px;
     overflow-y: scroll;
     margin: 20px auto;
-    
+
 }
 .list:hover{
     background-color: #ddd;
@@ -149,7 +149,7 @@ table {
     color: #000;
     border-color: #F3D380 ;
     float: left;
-    
+
 }
 
 .Menu{
@@ -203,7 +203,7 @@ table {
 }
 
 .Menu_x1 button {
-    
+
 }
 
 .btnAAdd{
@@ -314,7 +314,7 @@ table {
     float: left;
     width: 200px;
     text-align: center;
-    
+
 }
 
 .infosub1{
@@ -370,19 +370,19 @@ table {
     font-weight: 800;
     line-height: normal;
 }
- 
+
 .radioSelect {
     margin-top: 15px;
     margin-left: 20px ;
     margin-right: 20px;
-    
+
 }
 .radioSelect label{
     margin-left: 10px ;
     margin-right: 30px;
     width: 100%;
 
-} 
+}
 
 .C1_styled-table {
     border-collapse: collapse;
@@ -521,7 +521,7 @@ table {
     width: 2%;
 }
 
-.C3_styled-table {
+.history_styled-table {
     border-collapse: collapse;
     margin: 25px 0;
     font-size: 0.9em;
@@ -534,57 +534,57 @@ table {
     text-align: center;
 }
 
-.C3_styled-table thead tr {
+.history_styled-table thead tr {
     background-color: #FDDA0D;
     color: #ffffff;
     text-align: left;
 }
 
-.C3_styled-table th,
-.C3_styled-table td {
+.history_styled-table th,
+.history_styled-table td {
     padding: 12px 15px;
 }
 
-.C3_styled-table tbody tr {
+.history_styled-table tbody tr {
     border-bottom: 1px solid #dddddd;
 }
 
-.C3_styled-table tbody tr:nth-of-type(even) {
+.history_styled-table tbody tr:nth-of-type(even) {
     background-color: #f3f3f3;
 }
 
-.C3_styled-table tbody tr:last-of-type {
+.history_styled-table tbody tr:last-of-type {
     border-bottom: 2px solid#FDDA0D;
 }
-.C3_styled-table tbody tr.active-row {
+.history_styled-table tbody tr.active-row {
     font-weight: bold;
     color: #FDDA0D;
 }
 
-.C3_th1{
+.history_th1{
     text-align: center;
     width: 5%;
 }
-.C3_th2{
+.history_th2{
     text-align: center;
     width: 15%;
 }
-.C3_th3{
+.history_th3{
     text-align: center;
     width:40% ;
 }
 
-.C3_th4{
+.history_th4{
     text-align: center;
     width: 10%;
 }
 
-.C3_th5{
+.history_th5{
     text-align: center;
     width: 10%;
 }
 
-.C3_th6{
+.history_th6{
     text-align: center;
     width: 2%;
 }
@@ -691,12 +691,12 @@ table {
     border: none;
     cursor: pointer;
   }
-  
+
   .dropdown {
     position: relative;
     display: inline-block;
   }
-  
+
   .dropdown-content {
     width: 100%;
     display: none;
@@ -706,20 +706,20 @@ table {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
-  
+
   .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
   }
-  
+
   .dropdown-content a:hover {background-color: #f1f1f1}
-  
+
   .dropdown:hover .dropdown-content {
     display: block;
   }
-  
+
   .dropdown:hover .dropbtn {
     background-color: #3e8e41;
   }
@@ -814,7 +814,7 @@ summary::after {
     bottom: 0;
     right: 0;
     width: 6%;
-}  
+}
 
 *, ::after, ::before {
     -webkit-box-sizing: inherit;
@@ -912,7 +912,7 @@ html, body, ul, ol {
      margin-left: auto;
      margin-right: auto;
      display: block;
-   
+
 }
 .C1AnameC:hover{
     color: #00B4CC;
@@ -951,7 +951,7 @@ html, body, ul, ol {
 
 
 
- 
+
 
 
   /* USER LIST TABLE */
@@ -971,8 +971,8 @@ html, body, ul, ol {
       font-size: 0.875em;
       font-style: italic;
   }
-  
-  
+
+
 
   .C2E_styled-table {
     border-collapse: collapse;
@@ -1045,7 +1045,7 @@ html, body, ul, ol {
 @media print {
    #printbtn {
     display: none;
-   } 
+   }
    @page {
     margin: 0;
    }
@@ -1087,7 +1087,7 @@ html, body, ul, ol {
     border: none;
     outline: none !important;
     margin-left: 10px;
-    cursor: pointer; 
+    cursor: pointer;
 }
 
 .table-title .btn i {
@@ -1120,7 +1120,7 @@ table.table th i {
     font-size: 13px;
     margin: 0 5px;
     cursor: pointer;
-}	
+}
 table.table td:last-child i {
     opacity: 0.9;
     font-size: 22px;
@@ -1187,11 +1187,11 @@ table.table .avatar {
 }
 .pagination li a:hover {
     color: #666;
-}	
+}
 .pagination li.active a, .pagination li.active a.page-link {
     background: #03A9F4;
 }
-.pagination li.active a:hover {        
+.pagination li.active a:hover {
     background: #0397d6;
 }
 .pagination li.disabled i {
@@ -1240,11 +1240,11 @@ table.table .avatar {
 
 .deleteM{
     text-align: center;
-   
+
 }
 .deleteM i {
     color: red;
-  
+
     margin-left: auto;
     margin-right: auto;
 }
@@ -1255,8 +1255,8 @@ table.table .avatar {
 
 
 .card {
-    
-    
+
+
     width: 100%;
     height: 100%;
     position: absolute;
@@ -1267,35 +1267,35 @@ table.table .avatar {
     transform: translate(-50%, -50%);
     /* box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); */
     transition: all 0.3s;
-    
+
     /* &:hover {
-      
+
       box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    
+
     } */
-    
-  
-    
+
+
+
     .photo {
       margin-top: 50px;
       padding: 30px;
       width: 45%;
       text-align: center;
       float: left;
-      
-      img { 
-        max-height: 240px; 
+
+      img {
+        max-height: 240px;
       }
-      
+
     }
-    
+
     .description {
         margin-top: 50px;
        padding: 30px;
        float: left;
        width: 55%;
        border-left: 2px solid #efefef;
-       
+
        h1 {
          color: #515151;
          font-weight: 300;
@@ -1304,31 +1304,31 @@ table.table .avatar {
          font-size: 30px;
          font-weight: 300;
        }
-     
+
        h2 {
         margin: 0px;
         color: #515151;
-        
+
         text-transform: uppercase;
         font-weight: 500;
        }
-      
-       h4 { 
+
+       h4 {
          margin: 0;
          color: #727272;
          text-transform: uppercase;
          font-weight: 500;
          font-size: 12px
        }
-      
-       p { 
-         font-size: 12px; 
+
+       p {
+         font-size: 12px;
          line-height: 20px;
          color: #727272;
          padding: 20px 0;
          margin: 0;
       }
-      
+
        button {
 
          outline: 0;
@@ -1344,20 +1344,20 @@ table.table .avatar {
          margin-right: 5px;
          transition: all 0.3s ease;
          font-weight: 500;
-         
+
          &:hover {
-           
-          
+
+
            border: 1px solid #aedaa6;
            color: #aedaa6;
            cursor: pointer;
-           
+
          }
 
        }
-      
+
     }
-    
+
   }
 
   @media screen and (max-width: 600px) {
@@ -1367,16 +1367,16 @@ table.table .avatar {
       width: 90%;
       margin: 0 auto;
     }
-  
+
     /* Add more responsive styles as needed */
   }
 
-  
+
   .btnCfda{
     height: 10vh;
     width: 100vw;
     text-align: center;
-    
+
 }
 
 
@@ -1388,7 +1388,7 @@ table.table .avatar {
    text-align: center;
    border-collapse: collapse;
 }
-    
+
 
 .table_section{
     height: 300x;
@@ -1397,9 +1397,9 @@ table.table .avatar {
     /* body{
         overflow: hidden;
     } */
-   
 
-  
+
+
 
     .tpl th{
         position: sticky;
@@ -1407,11 +1407,11 @@ table.table .avatar {
         background-color: #f6f9fc;
         color: #8493a5;
         font-size: 15px;
-    } 
-        
+    }
 
-   
-    
+
+
+
     .plac  {
         border-bottom: 1px solid #dddddd;
         padding: 10px 20px;
@@ -1447,15 +1447,15 @@ table.table .avatar {
     border-radius: 6px;
     cursor: pointer;
     padding: 10px;
-    
+
 }
 
 .plTD :nth-child(1){
-   
+
 }
 
 .plTD :nth-child(2){
-    
+
 }
 
 
